同步于: 12月3日10时2分

--- a/pages/p2/954502.md
+++ b/pages/p2/954502.md
@@ -1,4 +1,4 @@
-### 17则古训赠当今(图)
+### 解释李克强同学石泰峰为何甘当习的枪(组图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,9 +7,9 @@
 
 <div class="article_right" style="fone-color:#000">
  <p style="text-align:center">
-  <img alt="行舍其华，言去其辩。（看中国：手绘插画 志清）" src="https://img2.secretchina.com/pic/2019/4-8/p2398774a771091283-ss.jpg" style="height:337px; width:600px"/>
+  <img alt="习近平和李克强" src="https://img3.secretchina.com/pic/2020/9-26/p2783642a517943073-ss.jpg" style="height:337px; width:600px"/>
   <br>
-   行舍其华，言去其辩。（看中国：手绘插画 志清）
+   习近平和李克强（图片来源: NICOLAS ASFOURI/AFP via Getty Images）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -29,58 +29,46 @@
   </div>
  </div>
  <p>
+  【看中国2020年12月3日讯】中国
   <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/古训" target="_blank">
-    古训
+   内蒙古
+  </strong>
+  当局8月以来强推汉语教育，引发蒙族大规模抗争及国际谴责声浪。近期内蒙古自治区教育厅厅长侯元、自治区政府秘书长包振玉被免职，疑因事件遭问责下台。但当地仍继续抓捕参与抗争的民众，又计划全国招300名汉语教师，派往内蒙古民族学校任教。这表示中共高层强推汉语，也就是被批评为灭绝蒙族文化的计划未变。这当中，内蒙古一把手
+  <strong>
+   <span href="https://www.secretchina.com/news/gb/tag/石泰峰" target="_blank">
+    石泰峰
    </span>
   </strong>
-  是先人
-  <strong>
-   智慧
-  </strong>
-  的
-  <strong>
-   结晶
-  </strong>
-  ，已在国人心中流淌千百年，其中蕴藏的智慧，应用在待人处世上，常有意想不到的效果，足以让人受用一生。
+  的作用就颇为敏感。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  古训今译，古训今鉴，读而思，思而行，行而达。下面收集了17句古训金言，望尔获益。
+  8月份当地抗争爆发以来，内蒙古党委书记
+  <span href="https://zh.m.wikipedia.org/zh-hans/%E7%9F%B3%E6%B3%B0%E5%B3%B0" target="_blank">
+   石泰峰
+  </span>
+  直到10月7日才首度开腔，声称要对照习近平的有关指示，改进工作。
  </p>
  <p>
-  【古训1】刚直，则当忘身以为国，履正以无偏。（ 据《金史•王修传》）
-  <br>
-   【今译】刚直之人，就应当为国家舍死忘生，做事正直。而不偏听偏信。
-  </br>
+  据外媒引述知情人说，8月底9月初，
+  <span href="https://www.secretchina.com/news/gb/tag/内蒙古" target="_blank">
+   内蒙古
+  </span>
+  通辽市、鄂尔多斯市、呼和浩特市等地，数以十万计的蒙古族学生和家长罢课集会，反对当局自小学一年级起强推汉语教学政策。但以学生家长身份参与维权的蒙古族律师胡宝龙及维权人士杨金都丽玛等人被捕至今，已近三个月，如今约七十人至今没有消息。另外，政府强迫当地官员在电视台上表明自己支持政府实施的通用语言政策，但是有的官员拒绝后被辞去职务，克什克腾旗三个苏木的书记、苏木长和学校校长总共6人被迫辞职，当初在内蒙古电视台蒙语组的工作人员反对通用语言政策后，警察给7人带上手铐和脚镣带到警察局。这7人被认为是带头者，而在中国，只有重型刑事犯罪人才带脚镣和手铐。
  </p>
  <p>
-  【古训2】岂有为人，知过而不能改者乎!（据《元史•木华黎传》）
-  <br>
-   【今译】 难道有人知道做错了，还不能改正的吗?（知错而不改，能叫人吗？）
-  </br>
+  知情人说，目前内蒙古已全面噤声，当局随时监听或跟踪每一个试图去当地采访的记者。
  </p>
  <p>
-  【古训3】伎巧为丧国斧斤，珠玉为荡心醯毒。侈丽纤美，不可以不遏。志骄于业泰，体逸于时安。（据《新唐书•后妃传》(上)）
-  <br>
-   【今译】奸诈诡谲是丧亡国家的斧头，珍珠美玉是心志摇荡的毒酒。奢华纤巧之美，不可以不加阻止。志气骄惰，是由于事业的安泰；身体淫乐，是由于处境的安闲。
-  </br>
+  据悉，10月23日，内蒙古自治区高层罕有地在中央巡视组、中纪委及中组部官员“指导”下，针对推汉语教学事件召开所谓专题民主生活会。会议历时一整天，自治区党委书记石泰峰等高层作了自我检讨。接下来会不会有省部级干部为事件负责？但石泰峰看来不会有事。
  </p>
- <p>
-  【古训4】任重道悠，利深祸速。（据《后汉书•皇后纪》上)
+ <p style="text-align: center;">
+  <img alt="" src="https://img2.secretchina.com/pic/2019/10-25/p2548531a526029590-ss.jpg" style="height:282px; width:500px"/>
   <br>
-   【今译】官职重大的人，任职的时间越长，求利越多，招祸越快。
-   <br>
-    <br>
-     【古训5】自古圣帝必以俭约为美，乱主必以奢侈贻患。（据《魏书•韩麒麟传》）
-     <br>
-      【今译】自古以来，圣明的帝王一定把俭朴当作好事；而昏庸的君主则一定因为奢侈，而种下祸患。
-     </br>
-    </br>
-   </br>
+   石泰峰（图片来源：网络）
   </br>
  </p>
  <center>
@@ -96,9 +84,11 @@
   </div>
  </center>
  <p>
-  【古训6】自古以来，身居富贵，能知止足者，甚少。（据《旧唐书•李靖传》）
-  <br/>
-  【今译】自古以来，身居富贵而能知道适可而止的人，很少。
+  石泰峰身份中突出的标签是现任国务院总理
+  <span href="https://www.secretchina.com/news/gb/tag/李克强" target="_blank">
+   李克强
+  </span>
+  的北大同学。他于1978年9月考入北京大学法律系。1982年本科毕业后考取北京大学法律系的研究生，师从著名法理学教授沈宗灵。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -113,9 +103,11 @@
   </div>
  </center>
  <p>
-  【古训7】行舍其华，言去其辩。（据《晋书•应贞传》）
-  <br/>
-  【今译】 行动应舍弃浮华（做事要诚实），言论要舍弃诡辩（说话要正直）。
+  外界所知，李克强今年以来与
+  <span href="https://www.secretchina.com/news/gb/tag/习近平" target="_blank">
+   习近平
+  </span>
+  的冲突已公开化，李克强不断有和习不同调的言论，但这次习近平在内蒙古“灭族”事件，却让李克强的同学当操刀手。内蒙古教育厅两官员下台，极可能就是当了石泰峰的替罪羊，当局要保住他不出事，留他干脏活。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -130,9 +122,7 @@
   </div>
  </center>
  <p>
-  【古训8】行道之人，德行文学为根株，正直刚毅为柯叶。有根无叶，或可俟时；有叶无根，膏雨所不能活也。至于孝慈、友悌、忠信、笃行，乃食之醯酱，可一日无哉?   （据《新唐书•柳公绰传》）
-  <br/>
-  【今译】遵行大道的人，以德行和文学为根株，以正直刚毅为枝叶。有根没有叶，尚且可以等待时日；有叶没有根，则肥沃的雨水也不能救活它。至于孝慈、友悌、忠信、诚实，犹如吃的酱醋，能够一天没有吗?
+  12月2日，就有中共大外宣媒体专门发文为石泰峰洗地，特别强调石和习近平的关系。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -147,9 +137,7 @@
   </div>
  </center>
  <p>
-  【古训9】行正道，循礼义，敦友爱，尽公忠。（据《清史稿•太宗本纪》)
-  <br/>
-  【今译】按正确的道理、准则做事，遵循礼法、道义，忠诚地促成友爱，竭力为公事效忠。
+  据称，石泰峰1985年研究生毕业后，即进入中共中央党校工作，随后一直在此处任职长达25年之久。在其中的后9年里，石泰峰任职该校副校长，历经胡锦涛、曾庆红、习近平三任校长。中央党校历来是中共意识形态重地，但又因落马贪官多在这里毕业，被民众戏称为腐败训练基地。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -164,9 +152,7 @@
   </div>
  </center>
  <p>
-  【古训10】杀身成仁，虽死犹生。（据《明史•晋恭王朱桐传》）
-  <br/>
-  【今译】杀身成仁，即使是死了，也像活着一样受人尊敬。
+  而在习近平还担任中央党校校长的2010年，石泰峰“意外”离开中共中央党校，南下江苏省任省委常委之职。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -181,14 +167,52 @@
   </div>
  </center>
  <p>
-  【古训11】名者，公器也。不可多取。（据《三国志•张温传》）
-  <br/>
-  【今译】名位，是天下人所共有的。不可以一个人贪心多取。
-  <br/>
-  <br/>
-  【古训12】危邦不入，乱邦不居。（据《晋书•张方传》）
-  <br/>
-  【今译】处于危险之中的国家，不要进入；处于动乱的国家，不要停留。
+  文章还说，习近平在2007年升任中共中央政治局常委，在政治局常委会中排名第六，次年又成为国家副主席，在这五年任期里分管中共中组部，其时就为上台执政着手人事方面的准备。而石泰峰在任职中共中央党校副校长之时，同时兼任该校组织部部长、政法教研室主任两职。因此，当时作为中共中央党校“一把手”习近平副手的石泰峰，既是习近平负责中共中央党校工作的助手，又是习近平参与中共人事组织方面的助手。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  据称，石泰峰在2010年9月突然离开工作了25年的中共中央党校，出任东部沿海经济大省江苏省的省委常委兼组织部部长，或许正是出于习近平的安排。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  在习近平上台后，石泰峰先是任江苏省长，再北上宁夏任党委书记，直至现在内蒙古担任党委书记。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  另外，石泰峰到内蒙古后，大搞“倒查20年”运动，内蒙古掀翻40余名处级以上官员。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -207,9 +231,7 @@
   </ins>
  </center>
  <p>
-  【古训13】兆始恶者有终殃，积不善者无余庆。（据《北史•崔宏传》）
-  <br/>
-  【今译】出现坏的征兆，最终必有灾祸；长期做坏事的人，不会有好的结局。
+  该文说，这场运动，其实是来自中纪委的建议，关键执行人就是石泰峰。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -224,9 +246,7 @@
   </div>
  </center>
  <p>
-  【古训14】汝惟不矜，天下莫与汝争能；汝惟不伐，天下莫与汝争功。（据《隋书•李谔传》）
-  <br/>
-  【今译】只要你不自以为贤能，天下就没有与你竞争才能的人；只要你不自我夸耀，天下就没有与你争夺功劳的人。
+  大外宣发文往往对外刻意透露中南海风向，起“辟谣”之用。相信这篇文章是有意强调习和石泰峰的关系很铁。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -241,9 +261,7 @@
   </div>
  </center>
  <p>
-  【古训15】进不知退，取祸之道也！（据《新唐书•高智周传》）
-  <br/>
-  【今译】只知前进不知后退，是招取祸败的道途。
+  既然石泰峰是在内蒙官场大搞清洗的习近平的“枪”，如今在内蒙强推汉化，同样也一样。这就说明石泰峰是不是李克强的同学，并没有太大关系，反正中共官场讲究表忠、站队。只是大家可能误会了，石泰峰除了早年虽是李克强同学，但后来与李已没有一毛关系，他在中央党校就和习搭上了关系，跟定的是习近平。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -258,9 +276,7 @@
   </div>
  </center>
  <p>
-  【古训16】志骄则好生事，器小则无远图。（据《明史•太祖本纪》(三)）
-  <br/>
-  【今译】志气高傲，容易惹是生非；器量狭小，就不会有长远打算。
+  最近因反习近平和反共被中共开除的中央党校退休教授蔡霞，对外媒爆称中共现在分三派。其中有一派叫钻营派，他们不是习家的老班底，但他又想钻到“习家军”的行列中去。蔡霞提到两个例子，一是天津市委书记李鸿忠，二是新疆维吾尔自治区党委书记陈全国。而内蒙古书记石泰峰，虽然和习有交集，另一方面也算是有所钻营，最终被收编，现在算是习家军。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -275,9 +291,21 @@
   </div>
  </center>
  <p>
-  【古训17】声过其实，古人所不取。攻乎异端，为政之甚害。（据《晋书•张闿》）
-  <br/>
-  【今译】声誉超过本人的实际情况，这是古人所不赞成的。攻击不同的观点与学说，对治理国家，是有严重危害的！
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  （仅代表作者个人立场和观点）
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -341,13 +369,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p7/938210.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p7/938210.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p7/938210.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/02/938210.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p2/954502.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p2/954502.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p2/954502.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/03/954502.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p7/938210.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p2/954502.md' width='0px' height='0px'/>
