--- a/pages/p1/954548.md
+++ b/pages/p1/954548.md
@@ -1,4 +1,4 @@
-### 17则古训赠当今(图)
+### 泼墨女孩控诉“被精神病”后遭高压监控(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,9 +7,9 @@
 
 <div class="article_right" style="fone-color:#000">
  <p style="text-align:center">
-  <img alt="行舍其华，言去其辩。（看中国：手绘插画 志清）" src="https://img2.secretchina.com/pic/2019/4-8/p2398774a771091283-ss.jpg" style="height:337px; width:600px"/>
+  <img alt="董瑶琼在发布控诉遭到当局监控视频后，遭到当局控制，而她先前发布的推文均消失了。" src="https://img3.secretchina.com/pic/2020/12-3/p2831041a438199477-ss.jpg"/>
   <br>
-   行舍其华，言去其辩。（看中国：手绘插画 志清）
+   董瑶琼在发布控诉遭到当局监控视频后，遭到当局控制，而她先前发布的推文均消失了。（图片来源：视频截图）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -29,59 +29,94 @@
   </div>
  </div>
  <p>
+  【看中国2020年12月3日讯】（看中国记者卢乙欣综合报导）中国“
   <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/古训" target="_blank">
-    古训
+   泼墨女孩
+  </strong>
+  ”
+  <strong>
+   董瑶琼
+  </strong>
+  于2018年在上海公开朝
+  <strong>
+   <span href="https://www.secretchina.com/news/gb/tag/习近平" target="_blank">
+    习近平
    </span>
   </strong>
-  是先人
-  <strong>
-   智慧
-  </strong>
-  的
-  <strong>
-   结晶
-  </strong>
-  ，已在国人心中流淌千百年，其中蕴藏的智慧，应用在待人处世上，常有意想不到的效果，足以让人受用一生。
+  画像泼墨后，两度被送进精神病院。为维权，她近日透过Twitter发布视频，并在影片中控诉“被精神病”后所遭遇到的不当对待，包括被“安排”到政府上班、遭高压监控且失去自由。不久，当地国保找上门，而董瑶琼先前发布的三个推文也都消失了。董瑶琼本人则已被当局控制。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  古训今译，古训今鉴，读而思，思而行，行而达。下面收集了17句古训金言，望尔获益。
+  <strong>
+   <span href="https://www.secretchina.com/news/gb/tag/泼墨女孩" target="_blank">
+    泼墨女孩
+   </span>
+   二度出院 泪诉遭到高压监控
+  </strong>
  </p>
  <p>
-  【古训1】刚直，则当忘身以为国，履正以无偏。（ 据《金史•王修传》）
-  <br>
-   【今译】刚直之人，就应当为国家舍死忘生，做事正直。而不偏听偏信。
-  </br>
+  综合维权网、德国之声（Deutsche Welle）及中央社报导，
+  <span href="https://www.secretchina.com/news/gb/tag/董瑶琼" target="_blank">
+   董瑶琼
+  </span>
+  于2018年7月在上海朝着中国总书记习近平的画像泼墨后，遭到公安以“攻击国家领导人”为由带走，后来两度被送入精神病院，至2020年5月才出院。
  </p>
  <p>
-  【古训2】岂有为人，知过而不能改者乎!（据《元史•木华黎传》）
-  <br>
-   【今译】 难道有人知道做错了，还不能改正的吗?（知错而不改，能叫人吗？）
-  </br>
+  11月30日，董瑶琼在Twitter发布一段自述视频。在影片画面中，董瑶琼显得十分憔悴，她含泪表示，自己已经第二次从精神病院出来，目前被“安排”在当地政府上班。不过，她强调，“说是上班，它其实就是一种监控，因为我其实去哪里都是受限制的”。
  </p>
  <p>
-  【古训3】伎巧为丧国斧斤，珠玉为荡心醯毒。侈丽纤美，不可以不遏。志骄于业泰，体逸于时安。（据《新唐书•后妃传》(上)）
-  <br>
-   【今译】奸诈诡谲是丧亡国家的斧头，珍珠美玉是心志摇荡的毒酒。奢华纤巧之美，不可以不加阻止。志气骄惰，是由于事业的安泰；身体淫乐，是由于处境的安闲。
-  </br>
+  董瑶琼说，如果她再次被政府关进医院，可能“一辈子出不来”。虽然她目前已经出院了，但工作的自由、选择朋友交往的自由，自己所有的自由都没有了，都被限制了。如今她要跟谁交往，官方“都要打听，都要问”。虽然未曾明说恐吓、威胁，但意思就是“不让你去交往”。
  </p>
  <p>
-  【古训4】任重道悠，利深祸速。（据《后汉书•皇后纪》上)
-  <br>
-   【今译】官职重大的人，任职的时间越长，求利越多，招祸越快。
+  董瑶琼强调，自己不想再过着这种高压监控的生活了，如今可能已是接近崩溃边缘。目前也不会去想，自己发布的推文会产生什么样的后果，自己会去承受后果。但董瑶琼只想问：“我做错了什么？我违法了吗？我精神真的有问题吗？”
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <blockquote class="twitter-tweet">
+  <p dir="ltr" lang="zh">
+   董瑶琼本人发的视频，瑶琼请朋友们关注她、把她的声音传播出去！
    <br>
+    瑶琼告诉大家她一直被中共当局剥夺自由，她没有精神病、也没有违反法律。
     <br>
-     【古训5】自古圣帝必以俭约为美，乱主必以奢侈贻患。（据《魏书•韩麒麟传》）
-     <br>
-      【今译】自古以来，圣明的帝王一定把俭朴当作好事；而昏庸的君主则一定因为奢侈，而种下祸患。
-     </br>
+     中共当局立即还给瑶琼自由。
+     <span href="https://t.co/GfunVuo66Q">
+      pic.twitter.com/GfunVuo66Q
+     </span>
     </br>
    </br>
-  </br>
+  </p>
+  <center>
+   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+    <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+    </div>
+   </div>
+   <div>
+    <center>
+     <div id="div-gpt-ad-1589559869784-0">
+     </div>
+    </center>
+   </div>
+  </center>
+  — 相林🌸 (@xianglin8964)
+  <span href="https://twitter.com/xianglin8964/status/1333382712753758212?ref_src=twsrc%5Etfw">
+   November 30, 2020
+  </span>
+ </blockquote>
+ <p>
+  其实，自从董瑶琼被中国当局送入精神病院后，其行踪就一直成谜。其父亲董建彪在接受采访时表示，自己于今年1月跟女儿董瑶琼见面后，直到8月才有机会前往前妻住处，短暂探望女儿10分钟。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -96,9 +131,7 @@
   </div>
  </center>
  <p>
-  【古训6】自古以来，身居富贵，能知止足者，甚少。（据《旧唐书•李靖传》）
-  <br/>
-  【今译】自古以来，身居富贵而能知道适可而止的人，很少。
+  董建彪表示，当时董瑶琼有时候会哭，而他的前妻以为女儿中邪，故曾请法师来家中驱邪。他前妻还说，女儿在家时，会又哭又叫，有时候甚至会胡言乱语。董建彪一度想为女儿拍照，但因为董瑶琼当时非常恐惧而作罢。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -113,9 +146,7 @@
   </div>
  </center>
  <p>
-  【古训7】行舍其华，言去其辩。（据《晋书•应贞传》）
-  <br/>
-  【今译】 行动应舍弃浮华（做事要诚实），言论要舍弃诡辩（说话要正直）。
+  董建彪说，董瑶琼的情绪不稳定，这是因官方对她作出各方面的限制，而董瑶琼为了表达不满，情绪才会不好。目前政府不允许她离开当地，“自由的空间变得很小”。当局也不允许他与董瑶琼联系、见面，也不准他在网络上发表言论。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -130,9 +161,7 @@
   </div>
  </center>
  <p>
-  【古训8】行道之人，德行文学为根株，正直刚毅为柯叶。有根无叶，或可俟时；有叶无根，膏雨所不能活也。至于孝慈、友悌、忠信、笃行，乃食之醯酱，可一日无哉?   （据《新唐书•柳公绰传》）
-  <br/>
-  【今译】遵行大道的人，以德行和文学为根株，以正直刚毅为枝叶。有根没有叶，尚且可以等待时日；有叶没有根，则肥沃的雨水也不能救活它。至于孝慈、友悌、忠信、诚实，犹如吃的酱醋，能够一天没有吗?
+  提及女儿的自由被限制，且可能会第三度被关入精神病院，对此，董建彪坦承，女儿的自由必须靠她自己争取，而他跟董瑶琼迄今都公开表示，不再惧怕中国当局的打压。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -147,9 +176,7 @@
   </div>
  </center>
  <p>
-  【古训9】行正道，循礼义，敦友爱，尽公忠。（据《清史稿•太宗本纪》)
-  <br/>
-  【今译】按正确的道理、准则做事，遵循礼法、道义，忠诚地促成友爱，竭力为公事效忠。
+  实际上，董瑶琼出院后，被迫面临的种种严密监控，均是官方为了加强对她的控制，所做出的打压手段。然而，官方非人道对待，让董瑶琼被迫发声，并强调自己已经做好准备，预备要承担因为发声而致使后续得被关入精神病院、被迫害的情况。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -164,9 +191,7 @@
   </div>
  </center>
  <p>
-  【古训10】杀身成仁，虽死犹生。（据《明史•晋恭王朱桐传》）
-  <br/>
-  【今译】杀身成仁，即使是死了，也像活着一样受人尊敬。
+  中共当局将精神病院当作“合法”迫害、关押维权上访人士、异议人士的手段。因此，中共的精神病院实质上，就是一个以药杀人而不须担负任何责任的邪恶恐怖的杀人集中营。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -181,14 +206,9 @@
   </div>
  </center>
  <p>
-  【古训11】名者，公器也。不可多取。（据《三国志•张温传》）
-  <br/>
-  【今译】名位，是天下人所共有的。不可以一个人贪心多取。
-  <br/>
-  <br/>
-  【古训12】危邦不入，乱邦不居。（据《晋书•张方传》）
-  <br/>
-  【今译】处于危险之中的国家，不要进入；处于动乱的国家，不要停留。
+  <strong>
+   附董瑶琼简介
+  </strong>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -207,9 +227,7 @@
   </ins>
  </center>
  <p>
-  【古训13】兆始恶者有终殃，积不善者无余庆。（据《北史•崔宏传》）
-  <br/>
-  【今译】出现坏的征兆，最终必有灾祸；长期做坏事的人，不会有好的结局。
+  2018年7月，董瑶琼曾因透过Twitter在上海市海航大厦前直播自己对中共独裁专制的不满，且批评政府对百姓实施洗脑逼迫，随后又朝中共最高领导人习近平的头像泼洒墨汁。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -224,9 +242,7 @@
   </div>
  </center>
  <p>
-  【古训14】汝惟不矜，天下莫与汝争能；汝惟不伐，天下莫与汝争功。（据《隋书•李谔传》）
-  <br/>
-  【今译】只要你不自以为贤能，天下就没有与你竞争才能的人；只要你不自我夸耀，天下就没有与你争夺功劳的人。
+  同年7月4日，其被上海市警方抓捕，董瑶琼从此失联，她的推特帐号也遭人关闭；7月16日，董瑶琼被上海市警方送回至湖南省攸县老家，并以疑似有“精神病”为由，遭到官方变相关押在株洲市第三医院中，直至董父于8月1日赴株洲市第三医院跟女儿见面后，才知道董瑶琼的泼墨行为已经遭到当局定性为“攻击国家领导人”。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -241,9 +257,7 @@
   </div>
  </center>
  <p>
-  【古训15】进不知退，取祸之道也！（据《新唐书•高智周传》）
-  <br/>
-  【今译】只知前进不知后退，是招取祸败的道途。
+  2019年11月19日，董瑶琼获得取保释放，随后被送至湖南省攸县桃水镇母亲住处。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -258,9 +272,7 @@
   </div>
  </center>
  <p>
-  【古训16】志骄则好生事，器小则无远图。（据《明史•太祖本纪》(三)）
-  <br/>
-  【今译】志气高傲，容易惹是生非；器量狭小，就不会有长远打算。
+  根据了解，董瑶琼在被拘押期间，饱受酷刑虐待。然而，董建彪于2020年1月2日跟女儿相见时，才知道她被关押在精神病院期间，曾被强迫吃药。服用药物一事，导致董瑶琼在获释时，呈现出与原先活泼开朗的样子截然不同的模样。获释后的董瑶琼，变成沉默寡言、神情紧张，甚至是有些痴呆的样子。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -275,9 +287,7 @@
   </div>
  </center>
  <p>
-  【古训17】声过其实，古人所不取。攻乎异端，为政之甚害。（据《晋书•张闿》）
-  <br/>
-  【今译】声誉超过本人的实际情况，这是古人所不赞成的。攻击不同的观点与学说，对治理国家，是有严重危害的！
+  2020年5月20日，董建彪亲发布资讯，声称女儿被再次关入株洲三医院。董瑶琼被关押在株洲三医院两个月后才出院，董建彪声称：董瑶琼出院后比先前的情况是更加严重了，令人十分痛苦。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -341,13 +351,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p7/938210.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p7/938210.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p7/938210.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/02/938210.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/954548.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/954548.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/954548.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/03/954548.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p7/938210.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p1/954548.md' width='0px' height='0px'/>
