同步于: 12月3日21时52分

--- a/pages/p7/938210.md
+++ b/pages/p7/938210.md
@@ -1,4 +1,4 @@
-### 蚂蚁IPO 新的财富狂欢还是又一场泡沫骗局？(图)
+### 17则古训赠当今(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,10 +6,10 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align: center;">
-  <img alt="蚂蚁集团 IPO 骗局 泡沫" src="https://img3.secretchina.com/pic/2020/10-9/p2792142a621370865-ss.jpg"/>
+ <p style="text-align:center">
+  <img alt="行舍其华，言去其辩。（看中国：手绘插画 志清）" src="https://img2.secretchina.com/pic/2019/4-8/p2398774a771091283-ss.jpg" style="height:337px; width:600px"/>
   <br>
-   蚂蚁集团起步于淘宝网第三方支付平台支付宝。（图片来源：HECTOR RETAMAL/AFP via Getty Images）
+   行舍其华，言去其辩。（看中国：手绘插画 志清）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,75 +21,67 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://158.247.195.190:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://158.247.195.190:10000/videos/blog/jiexi1400.html)
-
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
+
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年10月9日讯】（看中国记者丁晓雨综合报导）9月底以来，人们发现，战略配售
   <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/蚂蚁集团" target="_blank">
-    蚂蚁集团
+   <span href="https://www.secretchina.com/news/gb/tag/古训" target="_blank">
+    古训
    </span>
   </strong>
-  新股的基金广告包围了有广告位的每一个场景。从楼宇广告到从公交站牌、地铁站到机场，蚂蚁配售基金发售广告几乎占据了所有中心位置。“1元打新、100%中签”，让无数人疯狂。但也有人说，这场造富神话的背后，不过是另一个
+  是先人
   <strong>
-   泡沫
+   智慧
   </strong>
-  与
+  的
   <strong>
-   骗局
+   结晶
   </strong>
-  。
+  ，已在国人心中流淌千百年，其中蕴藏的智慧，应用在待人处世上，常有意想不到的效果，足以让人受用一生。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  《全天候科技》10月8日发表文章称，9月25日，以战略配售蚂蚁集团
-  <span href="https://zh.wikipedia.org/wiki/首次公开募股" target="_blank">
-   IPO
-  </span>
-  份额为卖点的5只“创新未来18个月封闭混合基金”在支付宝平台开售。这5只基金号称将10%资金用于申购蚂蚁新股，而且100%“打中新股”。
+  古训今译，古训今鉴，读而思，思而行，行而达。下面收集了17句古训金言，望尔获益。
  </p>
  <p>
-  铺天盖地的广告宣传，加上打新诱惑， 5只基金在开售当天，创造了2分钟售出10亿元、1小时售出102亿元的销售速度。
+  【古训1】刚直，则当忘身以为国，履正以无偏。（ 据《金史•王修传》）
+  <br>
+   【今译】刚直之人，就应当为国家舍死忘生，做事正直。而不偏听偏信。
+  </br>
  </p>
  <p>
-  其中，易方达基金旗下“易方达创新未来18个月封闭运作混合基金”认购金额达到120亿元上限，提前结束募集并启动比例配售。鹏华和中欧、汇添富的三只基金募集满120亿元。
+  【古训2】岂有为人，知过而不能改者乎!（据《元史•木华黎传》）
+  <br>
+   【今译】 难道有人知道做错了，还不能改正的吗?（知错而不改，能叫人吗？）
+  </br>
  </p>
  <p>
-  支付宝页面最新数据显示，超过1000万人参与了五只基金的购买。资本市场的下一个造富神话，已经让人们陷入了疯狂，无数人梦想在这场新的造富狂潮中分得一杯羹。
+  【古训3】伎巧为丧国斧斤，珠玉为荡心醯毒。侈丽纤美，不可以不遏。志骄于业泰，体逸于时安。（据《新唐书•后妃传》(上)）
+  <br>
+   【今译】奸诈诡谲是丧亡国家的斧头，珍珠美玉是心志摇荡的毒酒。奢华纤巧之美，不可以不加阻止。志气骄惰，是由于事业的安泰；身体淫乐，是由于处境的安闲。
+  </br>
  </p>
  <p>
-  打新，是普通投资者参与蚂蚁集团IPO为数不多的路径。虽然
-  <span href="https://zh.wikipedia.org/wiki/蚂蚁集团" target="_blank">
-   蚂蚁集团
-  </span>
-  同时在科创板和港股上市，但很多人都选择了去港股打新。因为科创板打新门槛较高，需要有科创板开户资格，也就是要保持20个交易日日均50万资产，同时需要2年交易经验。而在港股认购新股，只要有港股账户即可，没有个股持仓要求。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  为了最大程度获利，很多打新者，除了准备投入数十万自有资金外，还通过券商进行杠杆融资。加上杠杆部分，有人为蚂蚁
-  <span href="https://www.secretchina.com/news/gb/tag/IPO" target="_blank">
-   IPO
-  </span>
-  准备的打新资金达到了300万元左右。高杠杆对应着的是不菲的成本。据欲打新的投资者透露， 10倍杠杆资金对应的是超6%的年化利息。
+  【古训4】任重道悠，利深祸速。（据《后汉书•皇后纪》上)
+  <br>
+   【今译】官职重大的人，任职的时间越长，求利越多，招祸越快。
+   <br>
+    <br>
+     【古训5】自古圣帝必以俭约为美，乱主必以奢侈贻患。（据《魏书•韩麒麟传》）
+     <br>
+      【今译】自古以来，圣明的帝王一定把俭朴当作好事；而昏庸的君主则一定因为奢侈，而种下祸患。
+     </br>
+    </br>
+   </br>
+  </br>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -104,7 +96,9 @@
   </div>
  </center>
  <p>
-  富途证券一位内部人士告诉《全天候科技》，目前该机构为参与蚂蚁集团港股打新的投资者准备了300亿元的融资额度。
+  【古训6】自古以来，身居富贵，能知止足者，甚少。（据《旧唐书•李靖传》）
+  <br/>
+  【今译】自古以来，身居富贵而能知道适可而止的人，很少。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -119,7 +113,9 @@
   </div>
  </center>
  <p>
-  除了加杠杆，有投资者为提高中签的概率，在多个券商分别开户，使用多个账号同时打新。有的开设十几个港股账户。在很多投资者看来，港股打新中签的概率要更高一些。
+  【古训7】行舍其华，言去其辩。（据《晋书•应贞传》）
+  <br/>
+  【今译】 行动应舍弃浮华（做事要诚实），言论要舍弃诡辩（说话要正直）。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -134,7 +130,9 @@
   </div>
  </center>
  <p>
-  按照广发证券此前的研报，科创板平均中签率为0.18%，且随时间推移呈下降趋势，自2020年4月以来，平均中签率低至0.08%。而统计数据显示，2019年港股平均中签率达50%～70%，即便是非常热门的股票，中签率也非常可观。
+  【古训8】行道之人，德行文学为根株，正直刚毅为柯叶。有根无叶，或可俟时；有叶无根，膏雨所不能活也。至于孝慈、友悌、忠信、笃行，乃食之醯酱，可一日无哉?   （据《新唐书•柳公绰传》）
+  <br/>
+  【今译】遵行大道的人，以德行和文学为根株，以正直刚毅为枝叶。有根没有叶，尚且可以等待时日；有叶没有根，则肥沃的雨水也不能救活它。至于孝慈、友悌、忠信、诚实，犹如吃的酱醋，能够一天没有吗?
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -149,7 +147,9 @@
   </div>
  </center>
  <p>
-  疯狂加杠杆的打新者，也成了各种基金公司、理财平台、证券机构追逐的肥肉。不少券商都声称可以提供10倍的融资杠杆，部分券商甚至杠杆更可以达到20倍。
+  【古训9】行正道，循礼义，敦友爱，尽公忠。（据《清史稿•太宗本纪》)
+  <br/>
+  【今译】按正确的道理、准则做事，遵循礼法、道义，忠诚地促成友爱，竭力为公事效忠。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -164,7 +164,9 @@
   </div>
  </center>
  <p>
-  富途证券方面也表示，他们除了为投资者提供充裕的融资打新额度，支持10倍银行杠杆融资外，还支持0本金打新。投资者可以港股、美股或者A股通的持仓股票抵押进行融资认购，提升购买力。
+  【古训10】杀身成仁，虽死犹生。（据《明史•晋恭王朱桐传》）
+  <br/>
+  【今译】杀身成仁，即使是死了，也像活着一样受人尊敬。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -179,22 +181,14 @@
   </div>
  </center>
  <p>
-  另外，富途证券还支持暗盘交易。暗盘交易是近年来券商针对打新投资者推出的一个新产品，可以在挂牌前进行股票买卖，让一些新股未中签的投资者获取入场机会，从而达到投资目的。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  为了获取更多的客户，在一些港股投资者交流社群中，还有港股券商发布合伙人招募信息，抛出了交易佣金、理财、资金托管等项目的高额返佣。
+  【古训11】名者，公器也。不可多取。（据《三国志•张温传》）
+  <br/>
+  【今译】名位，是天下人所共有的。不可以一个人贪心多取。
+  <br/>
+  <br/>
+  【古训12】危邦不入，乱邦不居。（据《晋书•张方传》）
+  <br/>
+  【今译】处于危险之中的国家，不要进入；处于动乱的国家，不要停留。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -213,7 +207,9 @@
   </ins>
  </center>
  <p>
-  由于在港股开立账户需要香港银行卡，办理银行卡又需要香港务工证明，有投资者表示，“现在一卡难求，审核的时间都要一个多月”。于是一些中介乘机兴起。
+  【古训13】兆始恶者有终殃，积不善者无余庆。（据《北史•崔宏传》）
+  <br/>
+  【今译】出现坏的征兆，最终必有灾祸；长期做坏事的人，不会有好的结局。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -228,7 +224,9 @@
   </div>
  </center>
  <p>
-  一位中介表示，他们可以帮助用户直接对接香港的律师和熟悉的银行经理进行远程开户，从而快速办理香港银行卡。每个账户收取1500元，律师费500元。
+  【古训14】汝惟不矜，天下莫与汝争能；汝惟不伐，天下莫与汝争功。（据《隋书•李谔传》）
+  <br/>
+  【今译】只要你不自以为贤能，天下就没有与你竞争才能的人；只要你不自我夸耀，天下就没有与你争夺功劳的人。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -243,7 +241,9 @@
   </div>
  </center>
  <p>
-  蚂蚁战略配售基金目前还未全部销售完毕，但最初的火爆过了，网络上关于5只基金的吐槽已越来越多，尤其是“封闭期长”，让投资者感到担心，因为未来18个月，蚂蚁集团股价走势的不确定性太大，会不会成为下一个中石油、京沪高铁、中芯国际？
+  【古训15】进不知退，取祸之道也！（据《新唐书•高智周传》）
+  <br/>
+  【今译】只知前进不知后退，是招取祸败的道途。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -258,7 +258,9 @@
   </div>
  </center>
  <p>
-  也有投资者指出，这五只基金蚂蚁配股最高只有10%，另外90%买入方向完全不受控制，即便是蚂蚁集团股票表现不错，对于基金整体的收益也贡献不大。
+  【古训16】志骄则好生事，器小则无远图。（据《明史•太祖本纪》(三)）
+  <br/>
+  【今译】志气高傲，容易惹是生非；器量狭小，就不会有长远打算。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -273,11 +275,9 @@
   </div>
  </center>
  <p>
-  有网友表示，都在吹嘘的时候就是泡沫和
-  <span href="https://www.secretchina.com/news/gb/tag/骗局" target="_blank">
-   骗局
-  </span>
-  。
+  【古训17】声过其实，古人所不取。攻乎异端，为政之甚害。（据《晋书•张闿》）
+  <br/>
+  【今译】声誉超过本人的实际情况，这是古人所不赞成的。攻击不同的观点与学说，对治理国家，是有严重危害的！
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -309,7 +309,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -341,13 +341,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/948642.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/948642.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/948642.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/10/09/948642.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p7/938210.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p7/938210.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p7/938210.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/02/938210.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p5/948642.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p7/938210.md' width='0px' height='0px'/>
