--- a/pages/p7/938210.md
+++ b/pages/p7/938210.md
@@ -1,4 +1,4 @@
-### 中英两国大使手拿“习宝书”合影引外界质疑(图)
+### 17则古训赠当今(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,9 +7,9 @@
 
 <div class="article_right" style="fone-color:#000">
  <p style="text-align:center">
-  <img alt="2020年9月16日，英国驻华大使吴若兰在推特上贴出一张与中国驻英国大使吴晓明的合影。照片中，两人合拿一本《习近平谈治国理政》。" src="https://img3.secretchina.com/pic/2020/9-20/p2779821a318092099-ss.jpg" style="height:337px; width:600px"/>
+  <img alt="行舍其华，言去其辩。（看中国：手绘插画 志清）" src="https://img2.secretchina.com/pic/2019/4-8/p2398774a771091283-ss.jpg" style="height:337px; width:600px"/>
   <br>
-   2020年9月16日，英国驻华大使吴若兰在推特上贴出一张与中国驻英国大使吴晓明的合影。（图片来源：吴若兰推特）
+   行舍其华，言去其辩。（看中国：手绘插画 志清）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,74 +21,67 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://158.247.195.190:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://158.247.195.190:10000/videos/blog/jiexi1400.html)
-
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
+
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年9月20日讯】据美国之音报道，英国最新的驻华大使
   <strong>
-   吴若兰
-  </strong>
-  （Caroline Wilson）今年六月刚被任命，本月将正式上任。在其赶赴北京之前，这位英国外交官在推特上贴出一张与中国大使
-  <strong>
-   刘晓明
-  </strong>
-  合举《
-  <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/习近平" target="_blank">
-    习近平
+   <span href="https://www.secretchina.com/news/gb/tag/古训" target="_blank">
+    古训
    </span>
   </strong>
-  谈治国理政》的照片，引发外界对其是否能推动和维护英国价值和利益的质疑。
+  是先人
+  <strong>
+   智慧
+  </strong>
+  的
+  <strong>
+   结晶
+  </strong>
+  ，已在国人心中流淌千百年，其中蕴藏的智慧，应用在待人处世上，常有意想不到的效果，足以让人受用一生。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  9月16日，吴若兰在中国驻英使馆同中国驻英国大使
-  <span href="https://zh.wikipedia.org/zh-hans/%E5%88%98%E6%99%93%E6%98%8E" target="_blank">
-   刘晓明
-  </span>
-  会面之后，于个人官方推特账户上展示了自己同刘晓明共同手拿《习近平谈治国理政》英文版的一张合照，吴若兰在推文中说：
+  古训今译，古训今鉴，读而思，思而行，行而达。下面收集了17句古训金言，望尔获益。
  </p>
  <p>
-  “赶赴北京之前与
-  <span href="https://www.secretchina.com/news/gb/tag/刘晓明" target="_blank">
-   刘晓明
-  </span>
-  大使一次非常宝贵的会晤。我们能够、也必须同中方在气候、卫生、贸易、以及比较棘手的问题上，展开富有雄心的合作。我期待本着英国价值观，推动英中之间成熟、积极的关系。”
+  【古训1】刚直，则当忘身以为国，履正以无偏。（ 据《金史•王修传》）
+  <br>
+   【今译】刚直之人，就应当为国家舍死忘生，做事正直。而不偏听偏信。
+  </br>
  </p>
  <p>
-  <span href="https://www.secretchina.com/news/gb/tag/吴若兰" target="_blank">
-   吴若兰
-  </span>
-  的推文和照片发布不久，即引起各界关注。截至周五，英国驻华使馆官方推特即收到一千多条相关留言，绝大多数网民认为这则推文极为不合时宜。
+  【古训2】岂有为人，知过而不能改者乎!（据《元史•木华黎传》）
+  <br>
+   【今译】 难道有人知道做错了，还不能改正的吗?（知错而不改，能叫人吗？）
+  </br>
  </p>
  <p>
-  一位网民留言：“手举习语录，她还怎么可能同时高举英国价值呢？”
+  【古训3】伎巧为丧国斧斤，珠玉为荡心醯毒。侈丽纤美，不可以不遏。志骄于业泰，体逸于时安。（据《新唐书•后妃传》(上)）
+  <br>
+   【今译】奸诈诡谲是丧亡国家的斧头，珍珠美玉是心志摇荡的毒酒。奢华纤巧之美，不可以不加阻止。志气骄惰，是由于事业的安泰；身体淫乐，是由于处境的安闲。
+  </br>
  </p>
  <p>
-  “这跟手举毛主席语录有什么区别？”另一个网民说道。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  还有网友表示，“我在想吴大使是不是要把习近平的’新时代社会主义思想’介绍到西方。”
+  【古训4】任重道悠，利深祸速。（据《后汉书•皇后纪》上)
+  <br>
+   【今译】官职重大的人，任职的时间越长，求利越多，招祸越快。
+   <br>
+    <br>
+     【古训5】自古圣帝必以俭约为美，乱主必以奢侈贻患。（据《魏书•韩麒麟传》）
+     <br>
+      【今译】自古以来，圣明的帝王一定把俭朴当作好事；而昏庸的君主则一定因为奢侈，而种下祸患。
+     </br>
+    </br>
+   </br>
+  </br>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -103,7 +96,9 @@
   </div>
  </center>
  <p>
-  一位来自香港、自称作家和坚决捍卫民主的“RichS”在推特上留言说：吴若兰“不仅拍了这样的照片，还兴高采烈地把它贴出去，给全世界看；这岂不是凸显了无知吗？要不然就是非常想得到某一个人的首肯。”
+  【古训6】自古以来，身居富贵，能知止足者，甚少。（据《旧唐书•李靖传》）
+  <br/>
+  【今译】自古以来，身居富贵而能知道适可而止的人，很少。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -118,7 +113,9 @@
   </div>
  </center>
  <p>
-  截止到星期五晚间，这一评论获得了500多次点赞。
+  【古训7】行舍其华，言去其辩。（据《晋书•应贞传》）
+  <br/>
+  【今译】 行动应舍弃浮华（做事要诚实），言论要舍弃诡辩（说话要正直）。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -133,7 +130,9 @@
   </div>
  </center>
  <p>
-  英国东部赫尔德福特郡的一位地方议员也注意到了这条消息，他的留言是：“这太丢人了。”
+  【古训8】行道之人，德行文学为根株，正直刚毅为柯叶。有根无叶，或可俟时；有叶无根，膏雨所不能活也。至于孝慈、友悌、忠信、笃行，乃食之醯酱，可一日无哉?   （据《新唐书•柳公绰传》）
+  <br/>
+  【今译】遵行大道的人，以德行和文学为根株，以正直刚毅为枝叶。有根没有叶，尚且可以等待时日；有叶没有根，则肥沃的雨水也不能救活它。至于孝慈、友悌、忠信、诚实，犹如吃的酱醋，能够一天没有吗?
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -148,7 +147,9 @@
   </div>
  </center>
  <p>
-  有网民甚至找出1938年英国前首相张伯伦和希特勒在签署慕尼黑协定时的合照，贴在吴大使的推文后面。
+  【古训9】行正道，循礼义，敦友爱，尽公忠。（据《清史稿•太宗本纪》)
+  <br/>
+  【今译】按正确的道理、准则做事，遵循礼法、道义，忠诚地促成友爱，竭力为公事效忠。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -163,11 +164,9 @@
   </div>
  </center>
  <p>
-  值得一提的是，刘晓明贴出的合影中，中英国旗摆放位置是
-  <span href="https://www.secretchina.com" target="_blank">
-   中国
-  </span>
-  五星旗居中，照片拍出来的效果看起来是两位大使都站在红旗下，英国国旗几乎看不见。
+  【古训10】杀身成仁，虽死犹生。（据《明史•晋恭王朱桐传》）
+  <br/>
+  【今译】杀身成仁，即使是死了，也像活着一样受人尊敬。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -182,7 +181,14 @@
   </div>
  </center>
  <p>
-  曾经两度出任英国驻华外交官的盖思德（Roger Garside）对美国之音表示，“以我过去多年从事外交生涯的经验，我对我国刚被任命的派驻中华人民共和国大使能有这样的行为，感到震惊。我从来没有见过任何一个英国外交官会有如此行为。”
+  【古训11】名者，公器也。不可多取。（据《三国志•张温传》）
+  <br/>
+  【今译】名位，是天下人所共有的。不可以一个人贪心多取。
+  <br/>
+  <br/>
+  【古训12】危邦不入，乱邦不居。（据《晋书•张方传》）
+  <br/>
+  【今译】处于危险之中的国家，不要进入；处于动乱的国家，不要停留。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -201,11 +207,9 @@
   </ins>
  </center>
  <p>
-  英国最近在禁止中国电信巨头
-  <span href="https://www.secretchina.com/news/gb/tag/华为" target="_blank">
-   华为
-  </span>
-  参与5G网络建设等问题上态度强硬，吴若兰的推文被一些人解读为是在向北京示好。
+  【古训13】兆始恶者有终殃，积不善者无余庆。（据《北史•崔宏传》）
+  <br/>
+  【今译】出现坏的征兆，最终必有灾祸；长期做坏事的人，不会有好的结局。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -220,7 +224,9 @@
   </div>
  </center>
  <p>
-  盖思德认为有这样的可能。“但那是非常愚蠢的想法，”盖思德说。他认为，中国在处理国际关系时，一切从实际利益出发，不会注重这种肤浅的表态。
+  【古训14】汝惟不矜，天下莫与汝争能；汝惟不伐，天下莫与汝争功。（据《隋书•李谔传》）
+  <br/>
+  【今译】只要你不自以为贤能，天下就没有与你竞争才能的人；只要你不自我夸耀，天下就没有与你争夺功劳的人。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -235,7 +241,9 @@
   </div>
  </center>
  <p>
-  近年来撰写了多部有关中共全球战略著作的澳大利亚著名学者兼政论作家克莱夫・汉密尔顿（Clive Hamilton）在接受美国之音采访时说：“在我看来，相较于英国全国上下今年的政治变动，英国外交界显然落后于时代了；英国外交界尚未因中共的野心及其残酷无情的行为方式而觉醒。”
+  【古训15】进不知退，取祸之道也！（据《新唐书•高智周传》）
+  <br/>
+  【今译】只知前进不知后退，是招取祸败的道途。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -250,7 +258,9 @@
   </div>
  </center>
  <p>
-  他说，问题的核心在于，英国新任命的驻华大使“最终可能成为替中国的政策方针在伦敦游说的工具，而不是推动英国的政策。”
+  【古训16】志骄则好生事，器小则无远图。（据《明史•太祖本纪》(三)）
+  <br/>
+  【今译】志气高傲，容易惹是生非；器量狭小，就不会有长远打算。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -265,7 +275,9 @@
   </div>
  </center>
  <p>
-  汉密尔顿最近撰写的有关中共在海外扩张的新书书名为“Hidden Hand”，即《看不见的手》。他与英国政坛人士也有深厚的往来。他对美国之音表示，虽然吴若兰大使的推文以及晒照事件尚未受到来自官方的公开批评，但是“私下里，很多对中共怀有异议的英国政界人士已经对其作为深感不安。”
+  【古训17】声过其实，古人所不取。攻乎异端，为政之甚害。（据《晋书•张闿》）
+  <br/>
+  【今译】声誉超过本人的实际情况，这是古人所不赞成的。攻击不同的观点与学说，对治理国家，是有严重危害的！
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -297,7 +309,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -329,13 +341,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p9/946680.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p9/946680.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p9/946680.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/09/20/946680.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p7/938210.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p7/938210.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p7/938210.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/02/938210.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p9/946680.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p7/938210.md' width='0px' height='0px'/>
