--- a/pages/p9/954604.md
+++ b/pages/p9/954604.md
@@ -1,4 +1,4 @@
-### 川普政府宣布对伊朗18家银行实施制裁(图)
+### 澳洲财政部长强硬表态：不会对中国让步(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,9 +7,9 @@
 
 <div class="article_right" style="fone-color:#000">
  <p style="text-align: center;">
-  <img alt="Al-Drago-Pool/Getty Images" src="https://img3.secretchina.com/pic/2020/6-28/p2720671a557887269-ss.jpg"/>
+  <img alt="澳洲财政部长弗莱登伯格" src="https://img3.secretchina.com/pic/2020/12-3/p2831331a941329766-ss.jpg" style="height:400px; width:600px"/>
   <br>
-   美国财政部长姆努钦（图片来源：Al-Drago-Pool/Getty Images）
+   澳洲财政部长弗莱登伯格（Sam Mooy/Getty Images）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,124 +21,74 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://158.247.195.190:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://158.247.195.190:10000/videos/blog/jiexi1400.html)
-
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
+
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年10月9日讯】在关键的
+  【看中国2020年12月3日讯】数月以来，
   <strong>
-   美国
-  </strong>
-  总统大选前几周，
-  <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/川普" target="_blank">
-    川普
+   <span href="https://www.secretchina.com/news/gb/tag/中澳关系" target="_blank">
+    中澳关系
    </span>
-   (特朗普)
   </strong>
-  政府扩大了对
+  持续恶化，中国针对
   <strong>
-   伊朗
+   澳洲
   </strong>
-  的施压。美国财政部周四（10月8日）宣布，正式对伊朗18家
+  一系列商品实施关税或禁令，澳洲抨击中方的举措相当于“
   <strong>
-   银行
+   经济胁迫
   </strong>
-  实施制裁。
+  ”。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  <span href="https://www.secretchina.com/news/gb/tag/美国" target="_blank">
-   美国
+  尽管外交争端加剧损害了
+  <span href="https://www.secretchina.com/news/gb/tag/澳洲" target="_blank">
+   澳洲
   </span>
-  财政部长姆努钦表示，制裁伊朗的18家主要银行，体现了美国政府对阻止非法使用美元的承诺。
+  和中国之间的贸易，但澳洲财政部长弗莱登伯格（Josh Frydenberg）2日强调，澳洲不会在中国不满的问题上做出让步。
  </p>
  <p>
-  声明称，受制裁方在美国境内或受美国控制的资产将被查封，美国公民不得与之交易。在45天的过渡期过后，任何与受制裁实体交易的金融机构及个人将面临次级制裁的风险。
- </p>
- <p>
-  姆努钦表示，这次制裁将一直持续到
-  <span href="https://www.secretchina.com/news/gb/tag/伊朗" target="_blank">
-   伊朗
+  《彭博》报导，1名驻堪培拉中国外交官上月向媒体发佈1份文件，概述中方对澳洲的14条不满，包括澳洲在香港问题上干涉中国内政、呼吁对
+  <span href="https://www.secretchina.com/news/gb/tag/武汉肺炎" target="_blank">
+   武汉肺炎
   </span>
-  政府停止支持恐怖主义活动与进行核试验为止。
+  （新型冠状病毒病，COVID-19）疫情源头进行调查等。不过弗莱登伯格2日表示，澳洲在这些问题上“不会让步”。
  </p>
  <p>
-  此前，据《路透社》10月7日引述一名共和党国会助手的消息表示，美国政府正准备对伊朗金融业实施新制裁。这一举措实际上是将伊朗拒之全球金融业门外。
+  弗莱登伯格强调，这些议题是澳洲关切的核心，“我们的民族身份，新闻自由，民主选举产生的议会，以及涉及外国投资等方面，显然要维护我们的国家利益”。
  </p>
  <p>
-  美国在9月表示，对伊朗国防部与参与其核武器计划的实体和人员实施新的制裁，以支持美国对于现在就恢复联合国对伊朗一切制裁的主张。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  报导称，川普政府内部和外部的鹰派人士，在最近一段时间以来，一直在争取锁定伊朗的整个金融业。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  石油出口作为伊朗重要的收入来源，今年早些时候已经降到数十年以来的最低水准。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  美国重新对伊朗进行制裁，目标包括石油销售、运输，以及金融活动，不过食品、药品及其他人道主义物资则除外。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  目前，很多外国
-  <span href="https://www.secretchina.com/news/gb/tag/银行" target="_blank">
-   银行
+  另外，
+  <span href="https://www.secretchina.com" target="_blank">
+   中国
   </span>
-  已不再与伊朗有生意往来。
+  外交部发言人赵立坚日前在社群网站发图，影射澳洲军人拿刀对阿富汗牧羊童割喉，澳洲总理莫里森（Scott Morrison）随后在中国社群媒体微信发佈贴文要求道歉，但微信以该贴文使用"误导性文字"、"歪曲历史事件，混淆公众视听"为由，将其删除。对此，弗莱登伯格抨击，删贴是不必要之举。
+ </p>
+ <p>
+  原标题：硬起来！澳洲财政部长：不会对中国不满的问题让步
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -170,7 +120,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -202,13 +152,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/948665.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/948665.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/948665.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/10/09/948665.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p9/954604.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p9/954604.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p9/954604.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/03/954604.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p5/948665.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p9/954604.md' width='0px' height='0px'/>
