--- a/pages/nf4514/n12593248.md
+++ b/pages/nf4514/n12593248.md
@@ -5,9 +5,9 @@
 
 
 
-<div><img alt="【大选更新12·3】朱利安尼：邮寄选票窃选" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/12/GettyImages-1229918092-600x400.jpg"/>
+<div><img alt="【大选更新12·3】川普律师：议员恐吓证人" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/12/Jessy-Jacob-Michigan-1200x847-600x400.jpg"/>
 <div class="caption">
- 2020年12月2日，川普法律团队负责人朱利安尼，出席密歇根州众议院监督委员听证会。朱利安尼呼吁州议会应重新确立美国宪法赋予的权力，推选自己的选举人。 (Rey Del Rio/Getty Images)
+ 2020年12月2日，密歇根州众议院监督委员会（Michigan House Oversight Committee）在密歇根州兰辛市（Lansing）就大选舞弊问题举行听证会。底特律投票工作人员杰西·雅各布（Jessy Jacob）出席作证。（JEFF KOWALSKY/AFP via Getty Images）
 </div></div><hr/>
 
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
