--- a/pages/nf4514/n12593248.md
+++ b/pages/nf4514/n12593248.md
@@ -5,9 +5,9 @@
 
 
 
-<div><img alt="【大选更新12·3】川普：乔治亚证词如大片" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/Georgia-ballots-election-1229513130-700x420-600x400.jpg"/>
+<div><img alt="【大选更新12·3】川普：乔治亚证词如大片" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/12/GA-Hearing-20201203-600x400.jpg"/>
 <div class="caption">
- 乔治亚州的参议院监督委员会及司法委员会分别在上午9:30和下午1:00举办两场选举听证会。川普转发了听证会的视频，并说证词所说的选举舞弊现象如同大片一样。图为2020年11月7日，选举人员在乔治亚州劳伦斯维尔的格温内特县进行选票处理工作。（Elijah Nouvelage / Getty Images）
+ 2020年12月3日，乔治亚州的参议院监督委员会及司法委员会分别在上午9:30和下午1:00举办两场选举听证会。川普转发了听证会的视频，并称证词所说的选举舞弊现象如同大片一样。图为听证会播放录像监控画面视频截图。（大纪元）
 </div></div><hr/>
 
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
